# tianren-anima

./: .gitignore  README.md  pyproject.toml
data/: knowledge_facts.jsonl  nature_classify.jsonl  reflection_pairs.jsonl
models/: tokenizer.json
references/: db-migration.md  embedding-migration.md  fact-extraction.md  headroom-mcp-setup.md  health-check-and-backfill.md  minimind-training-pipeline.md  pending-memories-import.md  plugin-rename-workflow.md  token-compression-research.md  wsl-boot-config.md  zvec-integration.md
scripts/: augment_data.py  prepare_data.py  train_classifier.py  train_encoder.py
src/anima/: __init__.py  main.py  openai_handler.py
src/anima/core/: config.py  constants.py  db.py  types.py  vector_store.py
src/anima/memory/: decay.py  embed.py  graph_reorganizer.py  hsg.py  reflect.py  user_summary.py  version_chain.py  working.py
src/anima/migrations/: 002_add_nature.sql  003_fix_temporal_graph.sql  004_add_version_chain.sql
src/anima/models/: encoder.py  minimind_encoder.py
src/anima/ops/: altruistic_pool.py  dynamics.py  extract.py  extract_entities.py  extract_facts.py  ingest.py
src/anima/temporal_graph/: __init__.py  query.py  store.py
src/anima/utils/: vectors.py
tests/: test_core_paths.py  test_graph_native.py  test_omnibus.py  test_p1_features.py  test_p2_features.py  test_working_memory.py
